@@ -2,6 +2,8 @@
 
 	* tramp.el (tramp-default-method): Initialize with pscp/plink only
 	when running under W32.
+	(tramp-find-inline-compress, tramp-get-inline-coding): Quote
+	command after pipe symbol for local calls under W32.  (Bug#6784)
 
 2010-12-31  Michael Albinus  <michael.albinus@gmx.de>
 
